objects/HOW_TO_TEMPLATE__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>ATTACHMENT2__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>ATTACHMENT3__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>ATTACHMENT4__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>BENEFITS__c</fullName>
        <label>Benefits</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>CreatedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENVIRONMENT__c</fullName>
        <label>Environment</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>INTERNAL_NOTES__c</fullName>
        <label>Internal Notes</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PREPARATION__c</fullName>
        <label>Preparation</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ROLLBACKRECOVERY_PROCEDURE__c</fullName>
        <label>Rollback/Recovery Procedure</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>STEPS_TO_IMPLEMENT__c</fullName>
        <label>Steps to Implement</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SUPPLEMENTAL_INFORMATION__c</fullName>
        <label>Supplemental Information</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VERIFICATION_OF_RESULTS__c</fullName>
        <label>Verification of Results</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WARNINGS_AND_CAVEATS__c</fullName>
        <label>Warnings and Caveats</label>
        <length>64000</length>
        <type>Html</type>
    </fields>
    <label>How To</label>
    <pluralLabel>How To</pluralLabel>
</CustomObject>